# euclides

./: Cargo.toml  README.md  TODO
src/: i128_lib.rs  i32_lib.rs  i64_lib.rs  lib.rs  main.rs  traits.rs
