[package]
name = "euc_lib"
version = "0.1.7-rc1"
edition = "2021"
license = "GPL-3.0"
license_file="LICENSE"
description="Easy to use implementation of extended and normanl Euclidean algorithm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
